actor functions, function pre-processing, regexp validation rule (untested), comparison validation rule (not finished), several fixes to the data definition creation